[gd_scene load_steps=14 format=1]

[ext_resource path="res://enemies/base_enemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/sprites/green_enemy_sprite1.tres" type="Texture" id=2]
[ext_resource path="res://enemies/sprites/green_enemy_sprite4.tres" type="Texture" id=3]
[ext_resource path="res://enemies/sprites/green_enemy_sprite2.tres" type="Texture" id=4]
[ext_resource path="res://enemies/sprites/green_enemy_sprite3.tres" type="Texture" id=5]
[ext_resource path="res://controls/DBG.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.07107

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]

atlas = ExtResource( 3 )
region = Rect2( 16, 48, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=4]

atlas = ExtResource( 3 )
region = Rect2( 48, 48, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="Animation" id=5]

resource/name = "walking"
length = 20.0
loop = true
step = 0.1

[sub_resource type="Animation" id=6]

resource/name = "walking"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_direction"
} ]
}

[sub_resource type="GDScript" id=7]

script/source = "extends Control

func _ready():
	set_fixed_process(true)

func _fixed_process(delta):
	
"

[node name="base_enemy" type="RigidBody2D" groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -7 )
shapes/0/trigger = false
collision/layers = 4
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
debug = true
default_state = null
can_fall = false

[node name="collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -7 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sprite_anim" type="AnimatedSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, -8 )
frames = SubResource( 2 )
animation = "walking"
frame = 1
playing = true

[node name="sprite1" type="Sprite" parent="sprite_anim"]

visibility/visible = false
texture = ExtResource( 2 )

[node name="sprite2" type="Sprite" parent="sprite_anim"]

visibility/visible = false
texture = SubResource( 3 )

[node name="sprite3" type="Sprite" parent="sprite_anim"]

visibility/visible = false
texture = ExtResource( 5 )

[node name="sprite4" type="Sprite" parent="sprite_anim"]

visibility/visible = false
texture = SubResource( 4 )

[node name="raycasts_floor" type="Node2D" parent="."]

visibility/visible = false

[node name="raycast_left" type="RayCast2D" parent="raycasts_floor"]

transform/pos = Vector2( -6, -14 )
enabled = true
cast_to = Vector2( 0, 15 )
layer_mask = 1
type_mask = 15

[node name="raycast_right" type="RayCast2D" parent="raycasts_floor"]

transform/pos = Vector2( 6, -14 )
enabled = true
cast_to = Vector2( 0, 15 )
layer_mask = 1
type_mask = 15

[node name="raycasts_wall" type="Node2D" parent="."]

[node name="raycast_left" type="RayCast2D" parent="raycasts_wall"]

transform/pos = Vector2( -8, -7 )
enabled = true
cast_to = Vector2( -1, 0 )
layer_mask = 1
type_mask = 15

[node name="raycast_right" type="RayCast2D" parent="raycasts_wall"]

transform/pos = Vector2( 8, -7 )
enabled = true
cast_to = Vector2( 1, 0 )
layer_mask = 1
type_mask = 15

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/walking = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/walking = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="DBG" parent="." instance=ExtResource( 6 )]

margin/top = -10.0
margin/bottom = 30.0
script/script = SubResource( 7 )


